<resources>
    <string name="app_name" translatable="false">Radio Endstation</string>
    <string name="base_url" translatable="false">"https://lokke.de/radio/public/api/"</string>
    <string name="discord_base_url" translatable="false">"https://discord.com/api/webhooks/"</string>
    <!--App_ID generated from Admob-->
    <string name="adMob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <!--interestial ads ID created from Admob-->
    <string name="live_banner_ad_id" translatable="false" />
    <string name="interestial_live_ad_id" translatable="false" />
    <!--Admob test banner and interestial ads ID-->
    <string name="test_banner_ad_id" translatable="false" />
    <string name="interestial_test_ad_id" translatable="false" />


    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="play" translatable="false">PLAY</string>a
    <string name="stop" translatable="false">STOP</string>
    <string name="share" translatable="false">Teilen</string>
    <string name="rate_us" translatable="false">bewerte uns</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="song_request">Wunschbox</string>
    <string name="notification">Benachrichtigungen</string>
    <string name="cancel" translatable="false">Abbrechen</string>


    <!--    exit dialog text-->
    <string name="exit_dialog_title" translatable="false">Sicher?</string>
    <string name="exit_dialog_message" translatable="false">Das Beenden der App stoppt das Radio. Drücke MINIMIEREN um weiter Musik zu hören.</string>
    <string name="exit_dialog_message2" translatable="false">Drücke BEENDEN um die App zu schließen, sonst ABBRECHEN.</string>
    <string name="exit_positive_button" translatable="false">beenden</string>
    <string name="exit_negative_button" translatable="false">minimieren</string>
    <string name="exit_negative_button2" translatable="false">abbrechen</string>

    <!--    report dialog text-->
    <string name="report_title" translatable="false">Report Radio</string>
    <string name="report_msg" translatable="false">Your report will be sent for review. Press CANCEL to abort.</string>
    <string name="report" translatable="false">report</string>
    <string name="oops" translatable="false">Oops!!</string>
    <string name="no_results_found" translatable="false">No results found.</string>

    <!--    no connectivity dialog-->
    <string name="nc_dialog_title" translatable="false">Kein Netz!</string>
    <string name="nc_dialog_message" translatable="false">"Schau nach deiner Internetverbindung und probier's nochmal."</string>
    <string name="nc_dialog_button" translatable="false">"geht's jetzt?"</string>
    <string name="submit" translatable="false">Senden</string>
    <string name="email" translatable="false">Email</string>
    <string name="subject" translatable="false">Betreff</string>
    <string name="message" translatable="false">Nachricht</string>

    <!-- About US Text-->
    <string name="about" translatable="false">Über</string>
    <string name="profile" translatable="false">Profil</string>
    <string name="version" translatable="false">Version</string>
    <string name="description" translatable="false">Beschreibung</string>
    <string name="yourcompany_gmail_com" translatable="false"> </string>
    <string name="about_description" translatable="false">Mit dieser kleinen und schlicht gehaltenen App ist es dir möglich Radio Endstation überall dort zu empfangen, wo dir eine Internetverbindung zur Verfügung steht. Die App bietet keinen Schnickschnack und ist absolut werbefrei. Lediglich ein Startknopf und ein paar Grafiken. Wenn du es zulässt, dass die App den Status deines Telefonanrufs abfragen darf, pausiert die Musik automatisch, sobald du einen Anruf tätigst. Oder Kurz: Hier bekommst du rund um die Uhr von deinen lieblings Skinheads mittels Oi! Punk Rock und Ska musikalisch auf die Fresse.</string>

    <!--    response form-->
    <string name="error_format_invalid">Format ist ungültig</string>
    <string name="error_too_short">zu kurz</string>
    <string name="error_field_empty">Feld ist leer</string>

    <!--Social Media-->
    <string name="fb_page_username" translatable="false">RadioEndstation</string>
    <string name="fb_page_id" translatable="false">RadioEndstation</string>
    <string name="instagram_username" translatable="false">radio_endstation</string>
    <string name="twitter_username" translatable="false">RadioEndstation</string>
    <string name="whatsApp_number" translatable="false">CnIlvVT3pxTDCThwUJpOMV</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="whatsapp" translatable="false">WhatsApp</string>
    <string name="about_us">über uns</string>
    <string name="name" translatable="false">Dein Name</string>
    <string name="request_1">Liedwunsch</string>
    <string name="request_2">Alternativwunsch</string>


</resources>