<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/group_notification"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            app:actionLayout="@layout/switch_menu"
            android:icon="@drawable/ic_bell"
            android:title="@string/notification" />

    </group>

    <group
        android:id="@+id/group_social"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_facebook"
            android:title="@string/facebook" />

        <item
            android:id="@+id/nav_insta"
            android:icon="@drawable/ic_instagram"
            android:title="@string/instagram" />

        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_twitter"
            android:title="@string/twitter" />

        <item
            android:id="@+id/nav_whatsApp"
            android:icon="@drawable/ic_whatsapp"
            android:title="@string/whatsapp" />

    </group>

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_song_request"
            android:icon="@drawable/ic_message_square"
            android:title="@string/song_request" />

        <item
            android:id="@+id/nav_pp"
            android:icon="@drawable/ic_file_text"
            android:title="@string/privacy_policy" />


        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />

    </group>

    <group
        android:id="@+id/group_about"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_user"
            android:title="@string/about_us" />

    </group>


</menu>