<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.lokke.radio.endstation.util.NoConnectivityDialog" />
    </data>

    <LinearLayout
        android:id="@+id/no_connectivity_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="24dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/no_connectivity" />

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/nc_dialog_title" />

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nc_dialog_message"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_retry"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="@string/nc_dialog_button"
                    android:textColor="@color/colorAccent"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="1dp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</layout>
